--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bulma": "^0.9.0",
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "lodash.kebabcase": "^4.1.1",
