--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.2.0",
     "font-awesome": "^4.7.0",
     "lodash.kebabcase": "^4.1.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
